--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,9 @@
         "ext-json": "*",
         "illuminate/database": "*",
         "doctrine/orm": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11",
+        "ext-pdo": "*"
     }
 }
