--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "friendsofphp/php-cs-fixer": "^3.69"
     }
 }
